# Webber

./: .gitignore  README.md  Webber.spec  base.py  base.spec  details.json  exceptions.py  file_types.json  gui.py  loading_animation.py  main.py  main.spec  pyproject.toml  requirements.txt  run.py  settings.json  trial.py  version.txt  web_._None_index.html.pkl  webpage.py  webpage.spec  website.py  website.spec  website_data.pkl  websiteji.py  webview_launch.py  webview_launch.spec
assets/: spidie.mov
credits_site/: index.html
data/: details.json  file_types.json  settings.json
docs/: index.html  script.js  style.css
snakehustle.netlify.app/: index.html
snakehustle.netlify.app/assets/: index-6X3Up7uB.css  index-D3wMHnLP.js
snakehustle.netlify.app/snakegame-q62g.onrender.com/: index.html
src/: loading_animation.py  main.py  webpage.py  website.py  webview_launch.py
summer.hackclub.com/assets/: %40tiptap--pm--commands-462be415.js  %40tiptap--pm--dropcursor-dc29de98.js  %40tiptap--pm--gapcursor-0b821986.js  %40tiptap--pm--history-fd5ebefa.js  %40tiptap--pm--keymap-f6a71758.js  %40tiptap--pm--model-a1cf9f54.js  %40tiptap--pm--schema-list-4bfb61de.js  %40tiptap--pm--state-7d94bd18.js  %40tiptap--pm--transform-8b2c7941.js  %40tiptap--pm--view-3530ab00.js  actioncable.esm-e0ec9819.js  alpinejs-8c7f698e.js  application-a9712d1f.css  chartkick-fbe22225.js  howler-31f74f33.js  orderedmap-39aa3d1c.js  pixelart-1214970a.css  prosemirror-commands-02791907.js  prosemirror-model-34f0ad73.js  prosemirror-state-4858f01b.js  som-88d09b5c.css  (+9 more)
www.exampple.com/: index.html
(+34 files in other folders)
