[project]
name = "webber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.15.0",
    "chardet>=7.4.3",
    "cssbeautifier>=2.0.1",
    "html5lib>=1.1",
    "jsbeautifier>=2.0.1",
    "logging>=0.4.9.6",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pygame>=2.6.1",
    "pygame-textinput>=1.0.1",
    "pyinstaller>=6.21.0",
    "python-magic>=0.4.27 ; sys_platform == 'linux'",
    "python-magic-bin>=0.4.14 ; sys_platform != 'linux'",
    "pywebview>=6.2.1",
    "urlextract>=1.9.0",
    "urllib3>=2.7.0",
]
